<resources>
    <string name="app_name">VisitHumbang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearbyHotels">Nearby Hotels</string>
    <string name="upcomingEvents">Upcoming Events</string>
    <string name="lihatsemua"><u>View All</u></string>
    <string name="ongoing_events">Ongoing Events</string>
    <string name="passed_events">Passed Events</string>
    <string name="annual_events">Annual Events</string>
    <string name="fivestar_hotels">Five Stars</string>
    <string name="news">News</string>
    <string name="destinations">Destinations</string>
    <string name="events">Events</string>
    <string name="accomodations">Accomodations</string>
    <string name="title_sample">Title Sample</string>
    <string name="location_sample">Location Sample</string>
    <string name="date_sample">Date Sample</string>
    <string name="details_image">Details Image</string>
    <string name="description_sample">Description Sample</string>
    <string name="cheap_hotels">Cheap Hotels</string>
</resources>