<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".events.fragments.EventsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcomingEvents"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingEvents"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="10"
            tools:listitem="@layout/secondary_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_annualEvents"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_annualEvents"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="10"
            tools:listitem="@layout/primary_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ongoingEvents"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ongoingEvents"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="10"
            tools:listitem="@layout/third_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_passedEvents"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="10"
            tools:listitem="@layout/third_card" />

        <TextView
            android:id="@+id/upcomingEvents"
            style="@style/primaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/upcomingEvents"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/tv_upcomingEventsAll"
            style="@style/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/lihatsemua"
            app:layout_constraintBottom_toBottomOf="@+id/upcomingEvents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.993"
            app:layout_constraintStart_toEndOf="@+id/upcomingEvents"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/ongoingEvents"
            style="@style/secondaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/ongoing_events"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_upcomingEvents"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_OngoingEventsAll"
            style="@style/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/lihatsemua"
            app:layout_constraintBottom_toBottomOf="@+id/ongoingEvents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.995"
            app:layout_constraintStart_toEndOf="@+id/ongoingEvents"
            app:layout_constraintTop_toBottomOf="@+id/rv_upcomingEvents"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            style="@style/secondaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/passed_events"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_ongoingEvents"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_passedEventsAll"
            style="@style/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/lihatsemua"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.995"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/rv_ongoingEvents"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_annualEvents"
            style="@style/primaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:text="@string/annual_events"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.002"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_passedEvents"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>