<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".events.fragments.EventsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_nearbyHotels"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nearbyHotels"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="10"
            tools:listitem="@layout/secondary_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_fiveStarHotels"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fiveStarHotels"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="10"
            tools:listitem="@layout/third_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cheapHotels"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cheapHotels"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="10"
            tools:listitem="@layout/third_card" />

        <TextView
            android:id="@+id/nearbyHotels"
            style="@style/primaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/nearbyHotels"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/tv_upcomingEventsAll"
            style="@style/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/lihatsemua"
            app:layout_constraintBottom_toBottomOf="@+id/nearbyHotels"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.993"
            app:layout_constraintStart_toEndOf="@+id/nearbyHotels"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/fiveStarHotels"
            style="@style/secondaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/fivestar_hotels"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_nearbyHotels"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_OngoingEventsAll"
            style="@style/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/lihatsemua"
            app:layout_constraintBottom_toBottomOf="@+id/fiveStarHotels"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.995"
            app:layout_constraintStart_toEndOf="@+id/fiveStarHotels"
            app:layout_constraintTop_toBottomOf="@+id/rv_nearbyHotels"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/cheapHotels"
            style="@style/secondaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/cheap_hotels"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_fiveStarHotels"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_passedEventsAll"
            style="@style/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/lihatsemua"
            app:layout_constraintBottom_toBottomOf="@+id/cheapHotels"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.995"
            app:layout_constraintStart_toEndOf="@+id/cheapHotels"
            app:layout_constraintTop_toBottomOf="@+id/rv_fiveStarHotels"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>